--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= lang %>">
     <head>
-        <link rel="stylesheet" href="/styles.css" />
+        <link rel="stylesheet" href="/styles.css<%= assetsFingerPrint %>" />
         <link rel="manifest" href="manifest.json" />
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Timeresth - track time not reps.</title>
+        <title><%= title %></title>
     </head>
     <body>
         <div id="root"></div>
         <div id="modal-root"></div>
-        <script src="/main.js"></script>
+        <script src="/main.js<%= assetsFingerPrint %>"></script>
     </body>
 </html>
